# ObjectPropertyTree

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: CMakeLists.txt  node.h  node_path.h  object_property_tree.h  property_tree.h
src/: CMakeLists.txt  node.cc  node.h  node_path.cc  node_path.h  object_property_tree.cc  object_property_tree.h  property_tree.cc  property_tree.h  propertytree.h  trace.hpp  variant.cc  variant.h  variantpropertytree.cc  variantpropertytree.h
src/tests/: node.cc  node_path.cc  object_property_tree.cc  property_tree.cc
tests/: CMakeLists.txt  catch.hpp  main.cc
